app-sidecar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app-logging-poc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      volumes:
      - name: shared-logs
        emptyDir: {}

      containers:
      # Container 1: The Spring Boot App
      - name: spring-app
        image: local/spring-gradle-app:1.0
        imagePullPolicy: Never
        volumeMounts:
        - name: shared-logs
          mountPath: /var/log/app

      # Container 2: Splunk Universal Forwarder Sidecar
      - name: splunk-sidecar
        image: splunk/universalforwarder:9.3
        # Running explicitly as root stops the internal Ansible wrapper from calling 'sudo'
        securityContext:
          runAsUser: 0
          runAsGroup: 0
        volumeMounts:
        - name: shared-logs
          mountPath: /var/log/app
